app/assets/stylesheets/pages/events.scss
/**
 * Dashboard events feed
 *
 */
.event-item {
  font-size: $gl-font-size;
  padding: $gl-padding-top 0 $gl-padding-top 40px;
  border-bottom: 1px solid $white-normal;
  color: $list-text-color;
  position: relative;

  &.event-inline {
    .system-note-image {
      top: 20px;
    }

    .user-avatar {
      top: 14px;
    }

    .event-title,
    .event-item-timestamp {
      line-height: 40px;
    }
  }

  a {
    color: $gl-text-color;
  }

  .system-note-image {
    position: absolute;
    left: 0;
    top: 14px;

    svg {
      width: 20px;
      height: 20px;
      fill: $gl-text-color-secondary;
    }

    &.opened-icon,
    &.created-icon {
      svg {
        fill: $green-300;
      }
    }

    &.closed-icon svg {
      fill: $red-300;
    }

    &.accepted-icon svg {
      fill: $blue-300;
    }
  }

  .event-title {
    @include str-truncated(calc(100% - 174px));
    font-weight: 600;
    color: $list-text-color;
  }

  .event-body {
    margin-right: 174px;

    .event-note {
      word-wrap: break-word;

      .md {
        font-size: $gl-font-size;

        .label {
          color: $gl-text-color;
          font-size: inherit;
        }

        iframe.twitter-share-button {
          vertical-align: bottom;
        }
      }

      code {
        white-space: pre-wrap;
      }

      pre {
        border: none;
        background: $gray-light;
        border-radius: 0;
        color: $events-pre-color;
        margin: 0 20px;
        overflow: hidden;
      }

      .note-image-attach {
        margin-top: 4px;
        margin-left: 0;
        max-width: 200px;
        float: none;
      }

      p:last-child {
        margin-bottom: 0;
      }
    }

    .event-note-icon {
      color: $events-pre-color;
      float: left;
      font-size: $gl-font-size;
      line-height: 16px;
      margin-right: 5px;
    }
  }

  .event_icon {
    position: relative;
    float: right;
    border: 1px solid $gray-darker;
    padding: 5px;
    border-radius: 5px;
    background: $gray-light;
    margin-left: 10px;
    top: -6px;

    img {
      width: 20px;
    }
  }

  &:last-child { border: none; }

  .event_commits {
    li {
      &.commit {
        background: transparent;
        padding: 0;
        border: none;

        .commit-row-title {
          font-size: $gl-font-size;
        }
      }

      &.commits-stat {
        display: block;
        padding: 0 3px 0 0;

        &:hover {
          background: none;
        }
      }
    }
  }

  .event-item-timestamp {
    float: right;
    line-height: 22px;
  }
}


/*
 * Last push widget
 */
.event-last-push {
  overflow: auto;
  width: 100%;

  .event-last-push-text {
    @include str-truncated(100%);
    padding: 4px 0;
    font-size: 13px;
    float: left;
    margin-right: -150px;
    padding-right: 150px;
    line-height: 20px;
  }
}

@media (max-width: $screen-xs-max) {
  .event-item {
    padding-left: 0;

    .event-title {
      white-space: normal;
      overflow: visible;
      max-width: 100%;
    }

    .system-note-image {
      display: none;
    }

    .event-body {
      margin: 0;
      padding-left: 0;
    }

    .event-item-timestamp {
      display: none;
    }
  }
}

// hide event scope (namespace + project) where it is not necessary
.project-activity {
  .event-scope {
    display: none;
  }
}

