Fix fenced code block misalignment in events/activity
Fix https://gitlab.com/gitlab-org/gitlab-ce/issues/31263

`.event-item` is only used within the `events/_event` partial.
`.event-note` is only used within the `events/event/_common`(but no
markdown) and
`events/event/_note` partials.

The fenced code `pre` style is scoped to `.event-item .event-note`

Pages where events are used

 - User profile, ex. `/root`
 - Group Activity, ex. `/groups/foo/activity`
 - Project Activity, ex. `/foo/bar/activity

--- a/app/assets/stylesheets/pages/events.scss
+++ b/app/assets/stylesheets/pages/events.scss
@@ -89,7 +89,6 @@
         background: $gray-light;
         border-radius: 0;
         color: $events-pre-color;
-        margin: 0 20px;
         overflow: hidden;
       }
 
